# fineprint

./: .gitignore  README.md  README_CN.md  pyproject.toml
contractguard/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  parser.py  prompts.py  report.py  web.py
examples/bindu/: .env.example  README.md  agent.py
tests/: test_cli.py  test_models.py  test_parser.py
